// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendMoneyForm renders component when valid = false 1`] = `
<WithStyles(ForwardRef(Grid))
  className="root-mock"
  container={true}
  spacing={3}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <WithStyles(ForwardRef(Typography))
      variant="body1"
    >
      Recipient
    </WithStyles(ForwardRef(Typography))>
    <TextField
      InputProps={
        Object {
          "className": "field-mock",
        }
      }
      name="recipient"
      placeholder="Enter Zcash Address"
    />
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <WithStyles(ForwardRef(Typography))
      variant="body1"
    >
      Available to send
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Grid))
      alignItems="center"
      className="balance-mock field-mock"
      container={true}
      justify="space-between"
    >
      <WithStyles(ForwardRef(Grid))
        className="balanceField-mock"
        item={true}
        xs={4}
      >
        <WithStyles(ForwardRef(Grid))
          alignItems="center"
          container={true}
        >
          <Memo(ZcashIcon)
            size={20}
          />
          <WithStyles(ForwardRef(Typography))
            className="value-mock"
            variant="h6"
          >
            Zcash Wallet
          </WithStyles(ForwardRef(Typography))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={4}
      >
        <WithStyles(ForwardRef(Grid))
          alignItems="flex-end"
          container={true}
          direction="column"
          justify="center"
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <WithStyles(ForwardRef(Typography))
              className="balanceZec-mock"
              variant="h6"
            >
              0.7
               ZEC
            </WithStyles(ForwardRef(Typography))>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <WithStyles(ForwardRef(Typography))
              className="balanceUsd-mock"
              variant="caption"
            >
              $
              35.0000
            </WithStyles(ForwardRef(Typography))>
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <WithStyles(ForwardRef(Typography))
      variant="body1"
    >
      Amount
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Grid))
      container={true}
      justify="space-between"
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={5}
      >
        <LinkedTextField
          InputProps={
            Object {
              "className": "field-mock",
              "endAdornment": <ForwardRef(WithStyles)
                position="end"
              >
                ZEC
              </ForwardRef(WithStyles)>,
            }
          }
          label=""
          name="amountZec"
          otherField="amountUsd"
          placeholder="0.00"
          transformer={"50"}
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        className="textBetweenInputsItem-mock"
        item={true}
        xs={2}
      >
        <WithStyles(ForwardRef(Typography))
          className="textBetweenInputs-mock"
          variant="caption"
        >
          OR
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={5}
      >
        <LinkedTextField
          InputProps={
            Object {
              "className": "field-mock",
              "endAdornment": <ForwardRef(WithStyles)
                position="end"
              >
                USD
              </ForwardRef(WithStyles)>,
            }
          }
          label=""
          name="amountUsd"
          otherField="amountZec"
          placeholder="0.00"
          transformer={"0.4"}
        />
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <WithStyles(ForwardRef(Typography))
      variant="body1"
    >
      Memo
    </WithStyles(ForwardRef(Typography))>
    <TextField
      InputProps={
        Object {
          "className": "field-mock",
        }
      }
      disabled={false}
      name="memo"
      placeholder="Enter an optional message"
    />
    <WithStyles(ForwardRef(Typography))
      variant="body1"
    />
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <CheckboxWithLabel
      color="primary"
      label="Include my shipping info"
      name="shippingInfo"
    />
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <WithStyles(ForwardRef(Button))
      className="button-mock"
      color="primary"
      disabled={true}
      fullWidth={true}
      onClick={[Function]}
      variant="contained"
    >
      Continue
    </WithStyles(ForwardRef(Button))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`SendMoneyForm renders component when valid = true 1`] = `
<WithStyles(ForwardRef(Grid))
  className="root-mock"
  container={true}
  spacing={3}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <WithStyles(ForwardRef(Typography))
      variant="body1"
    >
      Recipient
    </WithStyles(ForwardRef(Typography))>
    <TextField
      InputProps={
        Object {
          "className": "field-mock",
        }
      }
      name="recipient"
      placeholder="Enter Zcash Address"
    />
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <WithStyles(ForwardRef(Typography))
      variant="body1"
    >
      Available to send
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Grid))
      alignItems="center"
      className="balance-mock field-mock"
      container={true}
      justify="space-between"
    >
      <WithStyles(ForwardRef(Grid))
        className="balanceField-mock"
        item={true}
        xs={4}
      >
        <WithStyles(ForwardRef(Grid))
          alignItems="center"
          container={true}
        >
          <Memo(ZcashIcon)
            size={20}
          />
          <WithStyles(ForwardRef(Typography))
            className="value-mock"
            variant="h6"
          >
            Zcash Wallet
          </WithStyles(ForwardRef(Typography))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={4}
      >
        <WithStyles(ForwardRef(Grid))
          alignItems="flex-end"
          container={true}
          direction="column"
          justify="center"
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <WithStyles(ForwardRef(Typography))
              className="balanceZec-mock"
              variant="h6"
            >
              0.7
               ZEC
            </WithStyles(ForwardRef(Typography))>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <WithStyles(ForwardRef(Typography))
              className="balanceUsd-mock"
              variant="caption"
            >
              $
              35.0000
            </WithStyles(ForwardRef(Typography))>
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <WithStyles(ForwardRef(Typography))
      variant="body1"
    >
      Amount
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Grid))
      container={true}
      justify="space-between"
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={5}
      >
        <LinkedTextField
          InputProps={
            Object {
              "className": "field-mock",
              "endAdornment": <ForwardRef(WithStyles)
                position="end"
              >
                ZEC
              </ForwardRef(WithStyles)>,
            }
          }
          label=""
          name="amountZec"
          otherField="amountUsd"
          placeholder="0.00"
          transformer={"50"}
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        className="textBetweenInputsItem-mock"
        item={true}
        xs={2}
      >
        <WithStyles(ForwardRef(Typography))
          className="textBetweenInputs-mock"
          variant="caption"
        >
          OR
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={5}
      >
        <LinkedTextField
          InputProps={
            Object {
              "className": "field-mock",
              "endAdornment": <ForwardRef(WithStyles)
                position="end"
              >
                USD
              </ForwardRef(WithStyles)>,
            }
          }
          label=""
          name="amountUsd"
          otherField="amountZec"
          placeholder="0.00"
          transformer={"0.4"}
        />
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <WithStyles(ForwardRef(Typography))
      variant="body1"
    >
      Memo
    </WithStyles(ForwardRef(Typography))>
    <TextField
      InputProps={
        Object {
          "className": "field-mock",
        }
      }
      disabled={false}
      name="memo"
      placeholder="Enter an optional message"
    />
    <WithStyles(ForwardRef(Typography))
      variant="body1"
    />
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <CheckboxWithLabel
      color="primary"
      label="Include my shipping info"
      name="shippingInfo"
    />
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <WithStyles(ForwardRef(Button))
      className="button-mock"
      color="primary"
      disabled={false}
      fullWidth={true}
      onClick={[Function]}
      variant="contained"
    >
      Continue
    </WithStyles(ForwardRef(Button))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;
